<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.orangecoastcollege.cs273.dnguyen1214.shoparound.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price_range"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/priceRangeSpinner" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/priceRangeLinearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/priceFromLinearLayout">

            <TextView
                android:text="@string/from"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/priceFromTextView"
                android:autoText="true"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/priceFromEditText"
                android:layout_weight="4"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/priceToLinearLayout">

            <TextView
                android:text="@string/to"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/priceToTextView"
                android:autoText="true"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/priceToEditText"
                android:layout_weight="4"
                android:textSize="14sp" />

        </LinearLayout>

        <Button
            android:text="@string/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:onClick="search" />


    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/productListLinearLayout">

        <TextView
            android:text="@string/recommendation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textAlignment="center" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1.69"

            android:id="@+id/topProductListView"/>
        <TextView
            android:text="@string/other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textAlignment="center" />


        <ListView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"

            android:id="@+id/productListView"/>

    </LinearLayout>


</LinearLayout>
